--- a/findbugsTestCases/.classpath
+++ b/findbugsTestCases/.classpath
@@ -4,10 +4,9 @@
 	<classpathentry kind="src" path="src/fakeAnnotations"/>
 	<classpathentry kind="src" path="src/fakeLibraries"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
-		<accessrules>
-			<accessrule kind="accessible" pattern="com/sun/**"/>
-			<accessrule kind="accessible" pattern="sun/util/**"/>
-		</accessrules>
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/j2ee.jar"/>
 	<classpathentry kind="lib" path="lib/intellij-annotations.jar"/>
@@ -19,11 +18,22 @@
 	<classpathentry kind="lib" path="lib/guice-servlet-3.0.jar"/>
 	<classpathentry kind="lib" path="lib/javax.inject.jar"/>
 	<classpathentry kind="lib" path="lib/gson-2.2.4.jar"/>
+	<classpathentry kind="lib" path="lib/annotations.jar"/>
+	<classpathentry kind="lib" path="lib/findbugs.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/jsr305.jar"/>
 	<classpathentry kind="lib" path="lib/joda-time-1.6.jar"/>
 	<classpathentry kind="lib" path="lib/guava.jar"/>
-	<classpathentry kind="lib" path="/findbugs/lib/annotations.jar"/>
-	<classpathentry kind="lib" path="/findbugs/lib/findbugs.jar" sourcepath="/findbugs/src"/>
-	<classpathentry kind="output" path="classesEclipse"/>
+	<classpathentry including="java/**/*.java|fakeAnnotations/**/*.java|fakeLibraries/**/*.java" kind="src" output="target/classes" path="src">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
